base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: example
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: web
  type: NodePort
