base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: example
spec:
  backend:
    serviceName: web
    servicePort: 8080
